cmake_minimum_required(VERSION 3.1.0)

project(TWSCPPAPI VERSION 9.71.0)

set(TARGET_NAME TwsCppApi)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../Src)
file(GLOB SOURCES ${SRC_DIR}/*.cpp)

add_definitions(-D_REENTRANT -D_DEBUG)
 
include_directories(#${API_INCLUDE_DIR} 
					${SRC_DIR} 
					${IB_POSIX_CLIENT_INCLUDE_DIR} ${IB_POSIX_CLIENT_SOURCE_DIR})

add_library(${TARGET_NAME} ${SOURCES} #${API_INCLUDES} 
			${IB_POSIX_CLIENT_SOURCES} ${IB_POSIX_CLIENT_INCLUDES})
set_source_files_properties(#${API_INCLUDES} 
							${IB_POSIX_CLIENT_INCLUDES} ${IB_POSIX_CLIENT_SOURCES}
						    PROPERTIES HEADER_FILE_ONLY TRUE)
target_compile_options(${TARGET_NAME} PRIVATE -Wall PUBLIC -std=gnu++0x)

set(EXPORT_NAME ${TARGET_NAME}Targets)
install(TARGETS ${TARGET_NAME} EXPORT ${EXPORT_NAME}
	LIBRARY 	DESTINATION lib
	ARCHIVE 	DESTINATION lib
	INCLUDES 	DESTINATION include)

include(CMakePackageConfigHelpers)
write_basic_package_version_file(
  ${CMAKE_CURRENT_BINARY_DIR}/${TARGET_NAME}ConfigVersion.cmake
  VERSION ${TWSAPI_VERSION}
  COMPATIBILITY ExactVersion)

export(EXPORT ${EXPORT_NAME} FILE ${CMAKE_CURRENT_BINARY_DIR}/${EXPORT_NAME}.cmake)

set(TARGET_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
configure_package_config_file(${TARGET_NAME}Config.cmake.in ${TARGET_NAME}Config.cmake INSTALL_DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

